--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Function Practice</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+
 </head>
 <body>
-    
+    <!-- CHAPTER EVENTS -->
+
+    <div class="container" onclick = "alert('Hi');console.log('click hogya');">
+        <button>Click me</button>
+    </div>
+
+    <div><a href="" onclick="greet()">Home page</a></div>
+
+
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
