--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Function Practice</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <!-- CHAPTER EVENTS -->
 
-    <div class="container" onclick = "alert('Hi');console.log('click hogya');">
+    <!-- <div class="container" onclick="alert('Hi');console.log('click hogya');">
         <button>Click me</button>
     </div>
 
-    <div><a href="" onclick="greet()">Home page</a></div>
+    <div><a href="JavaScript:void(0)" ondblclick="greet()">Home page</a></div>
 
+    <img src="./images/download (1).jfif" alt="" onmouseover="src = './images/download.jfif'"
+        onmouseout="src='./images/download (1).jfif'" onmousedown="src='./images/flower.jfif'">
 
+    <div>
+        <input type="text" id="abc">
+    </div>
 
-
+    <div id="btn">
+        <button class="btnColor">Send</button>
+    </div> -->
 
     <script src="app.js"></script>
 </body>
+
 </html>
