--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
         <button class="btnColor">Send</button>
     </div> -->
 
-    <div>
+    <!-- <div>
         <button class="container">Send</button>
         <h1 class="container">Send Button</h1>
         <p class="container">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, est.</p>
-    </div>
+    </div> -->
 
+
+
+    <label for="Full Name">
+        Full Name
+        <input type="text" id="input1" value="">
+        <button id="submit">Send</button>
+    </label>
 
 
 
