--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
 
 
 
-    <label for="Full Name">
+    <!-- <label for="Full Name">
         Full Name
         <input type="text" id="input1" value="">
+        <button id="submit">Send</button>
+    </label> -->
+    <label>
+        Enter your Email
+        <input type="email" name="" id="emailInput" value="" placeholder="example@gmail.com">
         <button id="submit">Send</button>
     </label>
 
