--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Function Practice</title>
     <link rel="stylesheet" href="style.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 
 <body>
@@ -37,14 +38,22 @@
 
 
 
-    <label for="Full Name">
+    <!-- <label for="Full Name">
         Full Name
         <input type="text" id="input1" value="">
         <button id="submit">Send</button>
-    </label>
+    </label> -->
 
 
+    <!-- INNER TEXT / HTML / TEXT CONTENT -->
 
+    <div class="design container">
+        <h1 id="heading" class="bg-red-600">Lorem</h1>
+        <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, cumque.</p>
+        <span>
+            <button id="btn">Read More</button>
+        </span>
+    </div>
 
 
 
