--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
         <input type="text" id="input1" value="">
         <button id="submit">Send</button>
     </label> -->
-    <label>
+    <!-- <label>
         Enter your Email
         <input type="email" name="" id="emailInput" value="" placeholder="example@gmail.com">
         <button id="submit">Send</button>
-    </label>
+    </label> -->
 
 
     <!-- INNER TEXT / HTML / TEXT CONTENT -->
 
     <div class="design container">
         <h1 id="heading" class="bg-red-600">Lorem</h1>
-        <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, cumque.</p>
+        <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         <span>
             <button id="btn">Read More</button>
         </span>
