--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Function Practice</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="bootstrap.css">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
+    <!-- <link rel="stylesheet" href="bootstrap.css"> -->
 </head>
 
 <body>
@@ -52,13 +52,30 @@
 
     <!-- INNER TEXT / HTML / TEXT CONTENT -->
 
-    <div class="design container">
+    <!-- <div class="design container">
         <h1 id="heading" class="bg-red-600">Lorem</h1>
         <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         <span>
             <button id="btn">Read More</button>
         </span>
+    </div> -->
+
+    <p class="bg">Lorem ipsum dolor sit amet.</p>
+    <p class="bg">Vel eaque id tempore vero!</p>
+    <p class="bg">Natus saepe voluptates unde debitis.</p>
+
+    <div>
+        <p class="bg">Lorem ipsum dolor sit amet.</p>
+        <p class="bg">Debitis fugit ducimus quam voluptates?</p>
     </div>
+
+
+
+    <button id="btn">change style</button>
+
+
+
+
 
 
 
