--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <button id="btn">Read More</button>
         </span>
     </div> -->
-
+<!-- 
     <p class="bg">Lorem ipsum dolor sit amet.</p>
     <p class="bg">Vel eaque id tempore vero!</p>
     <p class="bg">Natus saepe voluptates unde debitis.</p>
@@ -71,7 +71,7 @@
 
 
 
-    <button id="btn">change style</button>
+    <button id="btn">change style</button> -->
 
 
 
